--- a/translations.qrc
+++ b/translations.qrc
@@ -6,6 +6,7 @@
 <file>translations/eqonomize_es.qm</file>
 <file>translations/eqonomize_fr.qm</file>
 <file>translations/eqonomize_hu.qm</file>
+<file>translations/eqonomize_id.qm</file>
 <file>translations/eqonomize_it.qm</file>
 <file>translations/eqonomize_nl.qm</file>
 <file>translations/eqonomize_pt.qm</file>
